--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -16,6 +16,7 @@ body .demo-blog {
   font-family: 'Roboto', 'Helvetica', sans-serif;
 }
 
+
 .demo-blog .demo-blog__posts {
   max-width: 900px;
   padding: 0;
@@ -26,7 +27,7 @@ body .demo-blog {
 }
 
 .demo-blog.mdl-layout .mdl-layout__content {
-  padding-top: 230px;
+  padding-top: 80px;
   position: relative;
   -webkit-overflow-scrolling: touch;
 }
@@ -34,7 +35,7 @@ body .demo-blog {
   display: flex;
   flex-direction: column;
   align-items: stretch;
-  min-height: 360px;
+  min-height: 80px;
 }
 .demo-blog .mdl-card__title {
   padding: 16px;
@@ -105,7 +106,7 @@ body .demo-blog {
   margin-right: 16px;
 }
 .demo-blog .meta > * {
-  display: flex;
+/*  display: flex;*/
   flex-direction: column;
 }
 .demo-blog.is-small-screen .demo-blog__posts > .mdl-card.coffee-pic {
