--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -7,15 +7,10 @@
     </tr>
   </thead>
   <tbody>
+    <tr ng-repeat="contact in contacts.data">
+      <td><img src="{{contact.photoURL}}" /></td>
+      <td>{{contact.displayName}}</td>
+      <td>{{contact.profileURL}}</td>
+    </tr>
   </tbody>
 </table>
-
-<!-- example table entry
-
-<tr>
-<td class="mdl-data-table__cell--non-numeric">Acrylic (Transparent)</td>
-<td>25</td>
-<td>$2.90</td>
-</tr>
-
--->
